all transaction management logic implemented and updated openAPI docs
